# timetracking-cli-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.xml
src/: main.rs
