[package]
name = "timetracking-cli-rs"
version = "0.1.0"
authors = ["OakAxolotl <10947989+OakAxolotl@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = "1.0"
serde-xml-rs = "0.6"
serde_derive = "1.0"
time = {version = "0.3", features = ["local-offset", "formatting"]}
crossterm = "0.25"